Integrated the footer in the application html

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,3 +11,7 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+// Graphical essentials
+@import "components/footer";
+@import "components/navbar";
