--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Spots#index</h1>
-<p>Find me in app/views/spots/index.html.erb</p>
+<h1>Spots in Berlin</h1>
+<ul>
+  <% @spots.each do |spot| %>
+  <li> <%=link_to spot.name, spot_path(spot)%></li>
+  <% end %>
+</ul>
