--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,6 +1,7 @@
 <div class="banner">
   <div class="container">
-    <h1><strong>Spots</strong> name</h1>
-    <a class="btn btn-primary" href="#">Book now</a>
+    <h1>Flea Market Hub</h1>
+    <br>
+    <a class="btn btn-primary" href="#">Create a new spot</a>
   </div>
 </div>
