--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,5 @@
 <%= render 'shared/banner' %>
+
+<div class="containter">
+  <button type="button" class="btn btn-primary"><%= link_to 'View all spots', spots_path %></button>
+</div>
