--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -1,8 +1,6 @@
-<%= simple_form_for (@spot) do |f| %>
+<%= simple_form_for (@booking) do |f| %>
   <div class="form-inputs">
-    <%= f.input :title %>
-    <%= f.input :description %>
-    <%= f.input :price %>
+    <%= f.input :date %>
   </div>
 
   <div class="form-actions">
