--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,16 @@
 <%= render 'shared/banner' %>
 
-<div class="containter">
-  <button type="button" class="btn btn-primary"><%= link_to 'View all spots', spots_path %></button>
+<div class="container mt-2">
+    <%= link_to 'View all spots', spots_path, class: "btn btn-primary"%>
+</div>
+
+<div class="container mt-2">
+  <%= simple_form_for :search, url: root_path, method: :get do |f| %>
+    <div class="search-form-control form-group">
+      <input class="form-control string required" type="text" name="search[query]" id="search_query" />
+      <button name="button" type="submit" class="btn btn-flat">
+        <i class="fas fa-search"></i> View all spots
+      </button>
+    </div>
+  <% end %>
 </div>
