--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,3 +14,11 @@
     </div>
   <% end %>
 </div>
+
+<div class="container">
+  <h3> Most popular flea-market spots in Berlin </h3>
+  <p> Some Spots coming soon </p>
+
+  <h3> How does it work? </h3>
+  <p> Here will be a description of the cool platform we created </p>
+</div>
