--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -5,16 +5,16 @@
   </div>
 </div>
 
-<div class="container">
+<div class="container mt-4">
   <% @spots.each do |spot| %>
     <div class="card-spot">
       <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
       <div class="card-spot-infos">
         <div>
           <h2><%=link_to spot.title, spot_path(spot)%></h2>
-          <p><%=link_to spot.description, spot_path(spot)%></p>
+          <p><%=spot.description%></p>
         </div>
-        <h2 class="card-spot-pricing"><%=link_to spot.price, spot_path(spot)%> €</h2>
+        <h2 class="card-spot-pricing"><%=spot.price%>€</h2>
         <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-spot-user avatar-bordered" />
       </div>
     </div>
