--- a/app/views/bookings/_new.html.erb
+++ b/app/views/bookings/_new.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for (@booking) do |f| %>
+<%= simple_form_for [spot, booking] do |f| %>
   <div class="form-inputs">
     <%= f.input :date %>
   </div>
@@ -7,3 +7,4 @@
     <%= f.button :submit, class: "btn btn-primary" %>
   </div>
 <% end %>
+
