--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,4 +1,6 @@
-<h1><%= booking.title %></h1>
+<h1><%= booking.title %><%= link_to booking_path(booking), method: :delete, data: { confirm: "Are you sure?" } do %>
+    <i class="fa fa-trash destroy_booking"></i>
+    <% end %></h1>
 <ul>
 <li>Date: <%= booking.date %></li>
 <li>Description: <%= booking.description %></li>
