--- a/app/views/spots/show.html.erb
+++ b/app/views/spots/show.html.erb
@@ -1,7 +1,7 @@
 <ul>
   <li>
     <%= @spot.title %><%= link_to spot_path(spot), method: :delete, data: { confirm: "Are you sure?" } do %>
-    <i class="fa fa-trash destroy_dose"></i>
+    <i class="fa fa-trash destroy_spot"></i>
     <% end %>
     <%= @spot.description %>
     <%= @spot.price %>
