--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -11,8 +11,10 @@
       <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
       <div class="card-spot-infos">
         <div>
-          <h2><%=link_to spot.title, spot_path(spot)%></h2>
-          <p><%=spot.description%></p>
+          <% if policy(Spot).show? %>
+            <h2><%=link_to spot.title, spot_path(spot)%></h2>
+            <p><%=spot.description%></p>
+          <% end %>
         </div>
         <h2 class="card-spot-pricing"><%=spot.price%>€</h2>
         <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-spot-user avatar-bordered" />
