--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -2,6 +2,6 @@
   <div class="container">
     <h1>Flea Market Hub</h1>
     <br>
-    <a class="btn btn-primary" href="#">Create a new spot</a>
+    <a class="btn btn-primary"  <%= link_to "create a new spot", new_spot_path %>></a>
   </div>
 </div>
