created Spots #create und #destroy, bug fixes in Spots controller, spots policy, spots form, spots new, spots show, routes

--- a/app/views/spots/show.html.erb
+++ b/app/views/spots/show.html.erb
@@ -1,6 +1,6 @@
 <ul>
   <li>
-    <%= @spot.title %><%= link_to spot_path(spot), method: :delete, data: { confirm: "Are you sure?" } do %>
+    <%= @spot.title %><%= link_to spot_path(@spot), method: :delete, data: { confirm: "Are you sure?" } do %>
     <i class="fa fa-trash destroy_spot"></i>
     <% end %>
     <%= @spot.description %>
