--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,7 +11,9 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+@import "pages/spots/show";
 
 // Graphical essentials
 @import "components/footer";
 @import "components/navbar";
+
