Made the homepage a little bit fancier with static famous flea market

--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -1,6 +1,6 @@
 <div class="banner">
   <div class="container-index">
-    <h1>Spots in Berlin</h1>
+    <h1>All Spots</h1>
     <br>
   </div>
 </div>
