--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,24 +1,30 @@
 <%= render 'shared/banner' %>
-
+<br>
 <div class="container mt-2">
-  <%= link_to 'View all spots', spots_path, class: "btn btn-primary"%>
+  <%= link_to 'View all spots', spots_path, class: "btn btn-gradient"%>
+  <%= link_to "Create a new spot", new_spot_path, class: "btn btn-gradient"%>
 </div>
-
-<div class="container mt-2">
-  <%= simple_form_for :search, url: root_path, method: :get do |f| %>
-    <div class="search-form-control form-group">
-      <input class="form-control string required" type="text" name="search[query]" id="search_query" />
-      <button name="button" type="submit" class="btn btn-flat">
-        <i class="fas fa-search"></i> View all spots
-      </button>
-    </div>
-  <% end %>
-</div>
-
+<br>
+<br>
 <div class="container">
   <h3> Most popular flea-market spots in Berlin </h3>
-  <p> Some Spots coming soon </p>
+  <div class="cards">
+  <div class="card-category" id="mauerpark">
+    Mauerpark
+  </div>
+  <div class="card-category" id="nowkoelln">
+    Nowkoelln
+  </div>
+  <div class="card-category" id="raw">
+    RAW
+  </div>
+</div>
+
 
   <h3> How does it work? </h3>
   <p> Here will be a description of the cool platform we created </p>
 </div>
+<br>
+<br>
+
+
