--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -2,6 +2,17 @@
   <div class="container">
     <h1>Flea Market Hub</h1>
     <br>
-    <a class="btn btn-primary"  <%= link_to "create a new spot", new_spot_path %>></a>
+    <p>Find all available flea market spots in your city and book it fast and easy.</p>
+    <br>
+    <div class="container mt-2">
+      <%= simple_form_for :search, url: root_path, method: :get do |f| %>
+        <div class="search-form-control form-group">
+          <input class="form-control string required" type="text" name="search[query]" id="search_query" />
+          <button name="button" type="submit" class="btn btn-flat">
+          <i class="fas fa-search"></i> Search city
+          </button>
+        </div>
+      <% end %>
+    </div>
   </div>
 </div>
