--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,10 +1,9 @@
-<h1><%= booking.title %><%= link_to booking_path(booking), method: :delete, data: { confirm: "Are you sure?" } do %>
+<h1><%= @booking.spot.title %><%= link_to booking_path(@booking), method: :delete, data: { confirm: "Are you sure?" } do %>
     <i class="fa fa-trash destroy_booking"></i>
     <% end %></h1>
 <ul>
-<li>Date: <%= booking.date %></li>
-<li>Description: <%= booking.description %></li>
-<li>Price: <%= booking.price %></li>
-<% end %>
+<li>Date: <%= @booking.date %></li>
+<li>Description: <%= @booking.spot.description %></li>
+<li>Price: <%= @booking.spot.price %></li>
 </ul>
-<%= link_to "Show all Spots" spots_path%>
+<%= link_to "Show all Spots", spots_path %>
