Added some styling to every form and index

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,7 @@
 @import "components/index";
 @import "pages/index";
 @import "pages/spots/show";
+@import "pages/spots/new";
 
 // Graphical essentials
 @import "components/footer";
