--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -5,6 +5,12 @@
   text-align: center;
 }
 
+#spots {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 16px;
+}
+
 .cards {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
