--- a/app/views/spots/new.html.erb
+++ b/app/views/spots/new.html.erb
@@ -1,2 +1,6 @@
-<%= render 'form', spot: @spot  %>
-
+<div class="form-new-spot">
+  <br>
+  <h1>Create a new Spot</h1>
+  <br>
+  <%= render 'form', spot: @spot  %>
+</div>
