--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,30 +1,35 @@
 <%= render 'shared/banner' %>
 <br>
-<div class="container mt-2">
-  <%= link_to 'View all spots', spots_path, class: "btn btn-gradient"%>
-  <%= link_to "Create a new spot", new_spot_path, class: "btn btn-gradient"%>
-</div>
-<br>
-<br>
 
 <div class="container">
-  <h3> Most popular flea-market spots in Berlin </h3>
-  <div class="cards">
-    <div class="card-category" id="mauerpark">
-      Mauerpark
-    </div>
-    <div class="card-category" id="raw">
-      RAW
-    </div>
-    <div class="card-category" id="nowkoelln">
-      Nowkoelln
+
+  <div class="homepage-buttons mt-2">
+    <%= link_to 'View all spots', spots_path, class: "btn btn-gradient"%>
+    <%= link_to "Create a new spot", new_spot_path, class: "btn btn-gradient"%>
+  </div>
+
+  <div class="homepage-popular-flea-markets mt-4">
+    <h3> Most popular flea-market spots in Berlin </h3>
+    <div class="cards mt-4">
+      <div class="card-category" id="mauerpark">
+        Mauerpark
+      </div>
+      <div class="card-category" id="raw">
+        RAW
+      </div>
+      <div class="card-category" id="nowkoelln">
+        Nowkoelln
+      </div>
     </div>
   </div>
+
+  <div class="homepage-workflow">
+    <h3> How does it work? </h3>
+    <p> Here will be a description of the cool platform we created </p>
+  </div>
+
+
 </div>
 
-<div class="container">
-  <h3> How does it work? </h3>
-  <p> Here will be a description of the cool platform we created </p>
-</div>
 <br>
 <br>
