--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -1,6 +1,7 @@
 <div class="banner">
   <div class="container-index">
-    <h1>Spots in Berlin</h1>
+    <h1>All Spots</h1>
+    <br>
     <%= link_to "Create a new spot", new_spot_path, class: "btn btn-gradient"%>
     <br>
   </div>
