--- a/app/views/spots/indexMySpots.html.erb
+++ b/app/views/spots/indexMySpots.html.erb
@@ -1,1 +1,18 @@
-<h1>index my spots</h1>
+<h1>Your spots</h1>
+<div class="container mt-4" id="spots">
+  <% @my_spots.each do |spot| %>
+    <div class="card-spot mt-4">
+      <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
+      <div class="card-spot-infos">
+        <div>
+          <h2><%= link_to spot.title, spot_path(spot) %></h2>
+          <p><%= spot.description %></p>
+        </div>
+        <h2 class="card-spot-pricing"><%=spot.price%>€</h2>
+        <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-spot-user avatar-bordered" />
+      </div>
+    </div>
+  <% end %>
+</div>
+<br>
+<br>
