--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,7 +1,8 @@
 <h1>Your bookings</h1>
 <ul>
 <% @bookings.each do |booking| %>
-<li><%= booking.spot.title %> (<%= booking.date %>) <span class="ml-3"> <%= link_to "details", booking_path(booking)%></span></li>
+<li><%= booking.spot.title %> (<%= booking.date %>) <span class="ml-3"> <%= link_to "details", booking_path(booking)%> </span><span class="badge badge-primary"><%= booking.status %></span>
+</li>
 <% end %>
 </ul>
 <%= link_to "Show all Spots", spots_path %>
