--- a/app/views/spots/indexMySpots.html.erb
+++ b/app/views/spots/indexMySpots.html.erb
@@ -6,7 +6,10 @@
       <div class="card-spot-infos">
         <div>
           <h2><%= link_to spot.title, spot_path(spot) %></h2>
-          <p><%= spot.description %></p>
+          <ul><% spot.bookings.each do |booking| %>
+            <li><%= booking.status%> <%=booking.user.name%></li>
+            <% end %>
+          </ul>
         </div>
         <h2 class="card-spot-pricing"><%=spot.price%>€</h2>
         <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-spot-user avatar-bordered" />
