Added flatpickr to the form for a new booking

--- a/app/assets/stylesheets/pages/spots/_show.scss
+++ b/app/assets/stylesheets/pages/spots/_show.scss
@@ -21,7 +21,6 @@
 .container-spots-show {
   display: flex;
   justify-content: space-around;
-  align-items: center;
 }
 
 .container-spots-show-details, .container-spots-show-form  {
@@ -40,5 +39,14 @@
 }
 .container-spots-show-form h1 {
   margin-top: 20px;
+}
+
+.form-inputs {
+  width: 300px;
+}
+
+.container-form {
+  display: flex;
+  justify-content: space-around;
 }
 
