--- a/app/views/bookings/_new.html.erb
+++ b/app/views/bookings/_new.html.erb
@@ -1,18 +1,12 @@
 <%= simple_form_for [spot, booking] do |f| %>
   <br>
   <div class="form-inputs">
-    <%= f.input :date %>
+    <%= f.input :date, as: :string, input_html: { class: "datepicker"} %>
   </div>
   <br>
 
   <div class="form-actions">
     <%= f.button :submit, class: "btn btn-primary" %>
   </div>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
 <% end %>
 
