--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,15 +12,14 @@
           <%= link_to "Home", root_path , class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "Spots", spots_path, class: "nav-link" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "Bookings", bookings_path, class: "nav-link" %>
+          <%= link_to "All Spots", spots_path, class: "nav-link" %>
         </li>
         <li class="nav-item dropdown">
           <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <%= link_to "My Account", user_path(current_user), class: "dropdown-item" %>
+            <%= link_to "My Bookings", bookings_path, class: "dropdown-item" %>
+            <%= link_to "My Spots", bookings_path, class: "dropdown-item" %>
             <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           </div>
         </li>
