--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -10,7 +10,11 @@
 <div class="container mt-4" id="spots">
   <% @spots.each do |spot| %>
     <div class="card-spot mt-4">
+      <% if spot.photo.key.nil? %>
+      <img src="../../../assets/images/flea-marker-2.jpeg" alt="">
+      <% else %>
       <%= cl_image_tag spot.photo.key, crop: :fill %>
+      <% end %>
       <!-- <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" /> -->
       <div class="card-spot-infos">
         <div>
