--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -19,7 +19,7 @@
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <%= link_to "My Account", user_path(current_user), class: "dropdown-item" %>
             <%= link_to "My Bookings", bookings_path, class: "dropdown-item" %>
-            <%= link_to "My Spots", bookings_path, class: "dropdown-item" %>
+            <%= link_to "My Spots", myspots_path, class: "dropdown-item" %>
             <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           </div>
         </li>
