--- a/app/assets/stylesheets/pages/spots/_show.scss
+++ b/app/assets/stylesheets/pages/spots/_show.scss
@@ -1,5 +1,10 @@
-.container-spots-show-banner {
+.container-spots-show-banner img {
   background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.7));
+  background-size: cover;
+  // background-size: cover;
+  // background-repeat: no-repeat;
+  // background-position: 50% 50%;
+  width: 100%;
   color: white;
   text-align: center;
   font-weight: lighter;
