--- a/app/views/spots/show.html.erb
+++ b/app/views/spots/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container-spots-show-banner">
-  <img src="BILD VON MARIAN" alt="image">
+  <%= cl_image_tag @spot.photo.key %>
 </div>
 
 <div class="container-spots-show">
