started form_to_index_new

--- a/app/views/spots/show.html.erb
+++ b/app/views/spots/show.html.erb
@@ -1,6 +1,6 @@
  <div class="container-spots-show-banner">
   <% if @spot.photo.attached? %>
-      <%= cl_image_tag spot.photo.key %>
+      <%= cl_image_tag @spot.photo.key %>
       <% else %>
       <%= image_tag 'flea-market-2.jpeg'%>
       <% end %>
