Changed the styling of the account/profile of the user

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,7 @@
 @import "pages/index";
 @import "pages/spots/show";
 @import "pages/spots/new";
+@import "pages/user/show";
 
 // Graphical essentials
 @import "components/footer";
