--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,22 @@
-<h1>Hi <%=@user.name %> </h1>
-<p>name: <%= @user.name %></p>
-<p>email: <%= @user.email %></p>
-<p></p>
-<p>password: <%= @user.password%></p>
-<%= link_to "edit profile", edit_user_path %>
-<%= link_to "delete profile", user_path(@user) %>
+<div class="container">
+  <div class="profile-image">
+    <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier" %>
+  </div>
+  <div class="profile-information">
+    <div class="profile-details">
+      <br>
+      <br>
+      <div class="name"><p>Name: <%= @user.name %></p></div>
+      <div class="email"><p>Email: <%= @user.email %></p></div>
+      <div class="password"><p>Password: <%= @user.password%></p></div>
+    </div>
+    <div class="profile-buttons">
+      <%= link_to "Edit profile", edit_user_path, class: "btn btn-gradient" %>
+      <%= link_to "Delete profile", user_path(@user), class: "btn btn-gradient" %>
+    </div>
+  </div>
+  <br>
+  <br>
+  <br>
+  <br>
+</div>
