--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -7,6 +7,14 @@
   </div>
 </div>
 
+<!-- <div
+  id="map"
+  style="width: 100%;
+  height: 600px;"
+  data-markers="<%= @markers.to_json %>"
+  data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
+></div> -->
+
 <div class="container mt-4" id="spots">
   <% @spots.each do |spot| %>
     <div class="card-spot mt-4">
