--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -7,13 +7,13 @@
   </div>
 </div>
 
-<!-- <div
+<div
   id="map"
   style="width: 100%;
   height: 600px;"
   data-markers="<%= @markers.to_json %>"
   data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
-></div> -->
+></div>
 
 <div class="container mt-4" id="spots">
   <% @spots.each do |spot| %>
