--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,8 +4,8 @@
 <div class="container">
 
   <div class="homepage-buttons mt-2">
-    <%= link_to 'View all spots', spots_path, class: "btn btn-gradient"%>
-    <%= link_to "Create a new spot", new_spot_path, class: "btn btn-gradient"%>
+    <%= link_to 'View all spots', spots_path, class: "btn-pink"%>
+    <%= link_to "Create a new spot", new_spot_path, class: "btn-pink"%>
   </div>
 
   <div class="homepage-popular-flea-markets mt-4">
