added some style to the map

--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -16,6 +16,8 @@
 ></div>
 
 <div class="container mt-4" id="spots">
+
+  hello
   <% @spots.each do |spot| %>
     <div class="card-spot mt-4">
       <% if spot.photo.attached? %>
@@ -33,7 +35,10 @@
         <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-spot-user avatar-bordered" />
       </div>
     </div>
+    hello
   <% end %>
 </div>
+
+hello
 <br>
 <br>
