--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -1,4 +1,8 @@
-.container {
-  width: 500px;
-  align: center;
+// .container {
+//   width: 500px;
+//   align: center;
+// }
+
+.container-fluid {
+
 }
