Added a picture to the homepage for the most popular fle markets in berlin

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -21,16 +21,15 @@
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
 }
 
-#mauerpark {
-  background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(mauerpark.jpg);
+#mauerpark img {
+  background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3));
 }
 
-#raw {
-  background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(raw.jpg);
+#raw img {
+  background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3));
 }
 
-#nowkoelln {
-  background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(nowkoelln.jpg);
+#nowkoelln img {
+  background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3));
 }
-
 
