--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
     <h3> Most popular flea-market spots in Berlin </h3>
     <div class="cards mt-4">
       <div class="card-category" id="mauerpark">
-        Mauerpark
+      <%= image_tag 'flea-market-2.jpeg'%>
       </div>
       <div class="card-category" id="raw">
         RAW
@@ -22,7 +22,7 @@
     <h3> How does it work? </h3>
     <p> Here will be a description of the cool platform we created </p>
   </div>
-
+l
 
 </div>
 
