--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -10,7 +10,7 @@
   data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
 ></div>
 
-
+<% @spots.each do |spot| %>
       <% if spot.photo.attached? %>
       <%= cl_image_tag spot.photo.key, crop: :fill %>
       <% else %>
@@ -25,4 +25,5 @@
         <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-spot-user avatar-bordered" />
       </div>
     </div>
+<% end %>
 
