Solved some errors

--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -47,6 +47,7 @@
   #map {
     display: block;
   }
+}
 
 .mapboxgl-popup {
   max-width: 200px;
@@ -55,5 +56,4 @@
 .mapboxgl-popup-content {
   text-align: center;
   font-family: 'Open Sans', sans-serif;
-
 }
