--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -33,3 +33,15 @@
   background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3));
 }
 
+.btn-gradient {
+  background-color: #F0744E;
+}
+
+.search-form {
+  display: flex;
+}
+.input {
+  width: 800px;
+  margin-left: -14px;
+  margin-bottom: 10px;
+}
