--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,7 @@
 @import "pages/spots/show";
 @import "pages/spots/new";
 @import "pages/user/show";
+@import "pages/user/edit";
 
 // Graphical essentials
 @import "components/footer";
