--- a/app/assets/stylesheets/pages/user/_show.scss
+++ b/app/assets/stylesheets/pages/user/_show.scss
@@ -1,3 +1,7 @@
+.header {
+  text-align: center;
+  margin-top: 30px;
+}
 
 .profile-image img {
   width: 200px;
@@ -14,5 +18,10 @@
 }
 
 .profile-information {
-  margin-left: 100px;
+  margin-left: 330px;
+}
+
+.profile-buttons {
+  margin-top: 50px;
+  margin-bottom: 70px;
 }
