--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,7 @@
 <div class="container">
+  <div class="header">
+    <h1>Your Profile</h1>
+  </div>
   <div class="profile-image">
     <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier" %>
   </div>
@@ -6,17 +9,13 @@
     <div class="profile-details">
       <br>
       <br>
-      <div class="name"><p>Name: <%= @user.name %></p></div>
-      <div class="email"><p>Email: <%= @user.email %></p></div>
-      <div class="password"><p>Password: <%= @user.password%></p></div>
+      <div class="name"><p><strong>Name:</strong> <%= @user.name %></p></div>
+      <div class="email"><p><strong>Email:</strong> <%= @user.email %></p></div>
+      <div class="password"><p><strong>Password:</strong> <%= @user.password%></p></div>
     </div>
     <div class="profile-buttons">
       <%= link_to "Edit profile", edit_user_path, class: "btn btn-gradient" %>
       <%= link_to "Delete profile", user_path(@user), class: "btn btn-gradient" %>
     </div>
   </div>
-  <br>
-  <br>
-  <br>
-  <br>
 </div>
