Made a lot of css changes

--- a/app/assets/stylesheets/pages/spots/_new.scss
+++ b/app/assets/stylesheets/pages/spots/_new.scss
@@ -1,8 +1,11 @@
-.form-new-spot h1 {
+.container-form-new-spot h1 {
   text-align: center;
 }
 
-.form-actions {
-  display: flex;
-  justify-content: center;
+.new-booking-input {
+  margin-left: 30%
+}
+
+.new-booking-button {
+  margin-left: 36%;
 }
