--- a/app/views/spots/new.html.erb
+++ b/app/views/spots/new.html.erb
@@ -1,6 +1,6 @@
-<div class="form-new-spot">
+<div class="container-form-new-spot">
   <br>
   <h1>Create a new Spot</h1>
   <br>
-  <%= render 'form', spot: @spot  %>
+    <%= render 'form', spot: @spot  %>
 </div>
