--- a/app/assets/stylesheets/pages/spots/_show.scss
+++ b/app/assets/stylesheets/pages/spots/_show.scss
@@ -1,7 +1,6 @@
 .container-spots-show-banner img {
   background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.7));
   background-size: cover;
-  // background-size: cover;
   // background-repeat: no-repeat;
   // background-position: 50% 50%;
   width: 100%;
@@ -33,7 +32,7 @@
   background-color: white;
   border-radius: 5px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
-  height: 300px;
+  height: 350px;
   width: 450px;
   margin-top: 40px;
   margin-bottom: 20px;
@@ -47,8 +46,15 @@
   margin-top: 20px;
 }
 
-.form-inputs {
+.new-booking-input {
+  display: flex;
+  justify-item: center;
   width: 300px;
+}
+
+.new-booking-button {
+  display: flex;
+  justify-item: center;
 }
 
 .container-form {
