--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,11 @@
     <h1>Your Profile</h1>
   </div>
   <div class="profile-image">
-    <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier" %>
+    <% if @user.photo.attached? %>
+      <%= cl_image_tag @user.photo.key %>
+    <% else %>
+      <%= image_tag 'user.png'%>
+    <% end %>
   </div>
   <div class="profile-information">
     <div class="profile-details">
