--- a/app/views/spots/_form.html.erb
+++ b/app/views/spots/_form.html.erb
@@ -2,6 +2,7 @@
   <%= simple_form_for(@spot) do |f| %>
     <div class="form-inputs">
       <%= f.input :title %>
+      <%= f.input :address %>
       <%= f.input :description %>
       <%= f.input :price %>
       <%= f.input :photo, as: :file %>
