--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -7,19 +7,22 @@
   </div>
 </div>
 
-<%= render 'shared/cardlist' %>
+  <div class="container mt-2 d-flex">
+      <div>
+        <%= form_tag spots_path, method: :get do %>
+        <%= text_field_tag :query,
+        params[:query],
+        class: "form-control",
+        placeholder: "Find a spot"
+        %>
+      </div>
+      <div>
+        <%= submit_tag "Search", class: "btn btn-primary" %>
+        <% end %>
+      </div>
+    </div>
 
-<div
-  id="map"
-  style="width: 100%;
-  height: 600px;"
-  data-markers="<%= @markers.to_json %>"
-  data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
-></div>
-
-<div class="container mt-4" id="spots">
-
-  hello
+<div class="container" id="spots">
   <% @spots.each do |spot| %>
     <div class="card-spot mt-4">
       <% if spot.photo.attached? %>
@@ -37,6 +40,19 @@
         <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-spot-user avatar-bordered" />
       </div>
     </div>
-    hello
   <% end %>
 </div>
+
+</div>
+
+</div>
+
+<div
+  class="container mt-4"
+  id="map";
+  style="width: 100%;
+  height: 600px;"
+  data-markers="<%= @markers.to_json %>"
+  data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
+></div>
+
