--- a/app/views/spots/show.html.erb
+++ b/app/views/spots/show.html.erb
@@ -1,12 +1,5 @@
- <div class="container-spots-show-banner">
-  <% if @spot.photo.attached? %>
-    <%= cl_image_tag @spot.photo.key %>
-  <% else %>
-    <%= image_tag 'flea-market-2.jpeg'%>
-  <% end %>
-</div>
 
-<div class="container-spots-show">
+<div class="container">
 
   <div class="container-spots-show-details">
     <h1><%= @spot.title %></h1>
@@ -21,8 +14,23 @@
     <% end %>
   </div>
 
-  <div class="container-spots-show-form">
-    <h1>Book this spot</h1>
-      <%= render 'bookings/new', spot: @spot, booking: @booking %>
+
+  <div class="container-spots-show">
+
+    <div class="container-spots-show-image">
+      <% if @spot.photo.attached? %>
+        <%= cl_image_tag @spot.photo.key,  crop: :fill  %>
+      <% else %>
+        <%= image_tag 'flea-market-2.jpeg',  crop: :fill %>
+      <% end %>
+    </div>
+
+    <div class="container-spots-show-form">
+      <h1>Book this spot</h1>
+        <%= render 'bookings/new', spot: @spot, booking: @booking %>
+    </div>
+
   </div>
+<br>
+<br>
 </div>
