--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -6,6 +6,12 @@
   width: 300px;
 }
 
+.card-spot-img {
+  height: 150px;
+  width: 250px;
+  object-fit: cover;
+}
+
 .card-spot {
   overflow: hidden;
   background: white;
