--- a/app/views/spots/indexMySpots.html.erb
+++ b/app/views/spots/indexMySpots.html.erb
@@ -8,17 +8,21 @@
   <div class="container mt-2">
     <% @my_spots.each do |spot| %>
       <div class="card mb-3">
-        <% if spot.photo.attached? %>
-          <%= cl_image_tag spot.photo.key, class: 'card-img-top height: auto' %>
-        <% else %>
-          <%= image_tag 'flea-market-2.jpeg', class: 'card-image-top height: auto'%>
-        <% end %>
-      <div class="card-body">
-      <h5 class="card-title"><%= spot.title %></h5>
-      <p class="card-text"><%= spot.description %></p>
-      <p class="card-text">
-        <small class="text-muted">Edit your spot <%= link_to "edit", edit_spot_path(spot)%> | <%= link_to "delete", edit_spot_path(spot) %></small>
-      </p>
+        <div class="card-body">
+          <div class="d-flex">
+            <% if spot.photo.attached? %>
+              <%= cl_image_tag spot.photo.key, class: 'card-img-top height: auto' %>
+            <% else %>
+              <%= image_tag 'flea-market-2.jpeg', class: 'card-spot-img'%>
+            <% end %>
+            <div class="ml-4">
+              <h5 class="card-title"><%= spot.title %></h5>
+              <p class="card-text"><%= spot.description %></p>
+              <p class="card-text"> <small class="text-muted">Edit your spot <%= link_to "edit", edit_spot_path(spot)%> | <%= link_to "delete", edit_spot_path(spot) %></small>
+              </p>
+            </div>
+          </div>
+
           <div class="d-flex">
             <% if spot.bookings.last == nil %>
               <%= "Currently no bookings" %> </li>
@@ -26,7 +30,6 @@
               <div class="d-flex justify-content-between flex-wrap">
                 <% spot.bookings.each do |booking| %>
                   <div class="card mt-4">
-
                     <div class="card-header">
                       <% if booking.status == "pending" %>
                         <span class="badge badge-primary"><%= booking.status %></span>
@@ -36,7 +39,6 @@
                         <span class="badge badge-danger"><%= booking.status %></span>
                       <% end %>
                     </div>
-
                     <div class="card-body">
                       <h5 class="card-title">Booking request by <%= booking.user.name %></h5>
                       <p class="card-text">Booking Date: <%= booking.date %></p>
@@ -49,17 +51,13 @@
                         <%= "You confirmed the booking." %>
                       <% end %>
                     </div>
-
-
-
-                </div>
-              <% end %>
+                  </div>
+                <% end %>
+              </div>
+            <% end %>
+          </div>
         </div>
       </div>
-
-
-          </div>
-      <% end %>
     <% end %>
   </div>
 
