--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -2,7 +2,7 @@
   <div class="text-center mt-4">
     <h1>Your bookings</h1>
   </div>
-  <div class="d-flex justify-content-between flex-wrap">
+  <div class="d-flex justify-content-between flex-wrap mb-4">
     <% @bookings.each do |booking| %>
       <div class="card mt-4">
         <div class="card-header">
